# ChangeLog for net-zope/zope
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.194 2011/02/06 18:48:53 arfrever Exp $

*zope-2.13.4 (06 Feb 2011)
*zope-2.13.3 (06 Feb 2011)

  06 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.13.1.ebuild, +zope-2.13.3.ebuild, +zope-2.13.4.ebuild:
  Version bumps.

*zope-2.12.15 (06 Feb 2011)

  06 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.12.13.ebuild, +zope-2.12.15.ebuild:
  Version bump.

*zope-2.13.2 (20 Jan 2011)

  20 Jan 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.13.0.ebuild, +zope-2.13.2.ebuild:
  Version bump.

  14 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> zope-2.13.1.ebuild:
  marked ~ppc wrt #351612

  13 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> zope-2.12.14.ebuild:
  Marked ~ppc wrt #297734

*zope-2.13.1 (07 Dec 2010)

  07 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.13.1.ebuild:
  Version bump.

*zope-2.12.14 (07 Dec 2010)

  07 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.12.12.ebuild, +zope-2.12.14.ebuild:
  Version bump.

  29 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  zope-2.12.12.ebuild, zope-2.12.13.ebuild, zope-2.13.0.ebuild:
  Restrict Jython ABIs.

*zope-2.12.13 (07 Nov 2010)

  07 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.12.11.ebuild, +zope-2.12.13.ebuild:
  Version bump.

*zope-2.13.0 (07 Nov 2010)

  07 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.13.0_beta1.ebuild, -zope-2.13.0_rc1.ebuild, +zope-2.13.0.ebuild:
  Version bump.

*zope-2.13.0_rc1 (30 Oct 2010)

  30 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.13.0_alpha4.ebuild, +zope-2.13.0_rc1.ebuild:
  Version bump.

*zope-2.13.0_beta1 (17 Oct 2010)
