@@ -7,8 +7,8 @@ DIST Zope-2.9.10-final.tgz 7060210 RMD160 56bf67c05c2ef588844a2fb2140ac244565e3b
 DIST Zope-2.9.12-final.tgz 7088973 RMD160 c5095d988a745b9929a28a816b78a147f858b262 SHA1 673555c832c52d52ca29e1f9f10425ce13630897 SHA256 38aadbbaad940727a39080ef1f6de1d6a47dd77e4525e37b8abcc920e03b7802
 DIST Zope-3.2.2.tgz 6544087 RMD160 1e7e08e1178f449bf120d7fc2caa6259fde1a0cf SHA1 9bd3c099fc77f981a8b803770aca168eb813e260 SHA256 c6f6d49d8b910bc35a32b848c6296b7ad61cb64f83974b52dd3623169f141ba4
 DIST Zope-3.3.1.tgz 6594248 RMD160 11bf3b8c899518a5965f21a4a372912a4bc1438d SHA1 4576ac21c3415563d3b0b747e40963a762b63fce SHA256 6189999de3190e4b0d5110490567d9f7ef92379ea555f738fc741d49d0807be3
-DIST Zope2-2.12.14.zip 2336464 RMD160 3c8cf3f240eba9390c05bb6850d1283d3d10bab3 SHA1 74d31a6fb9b48d619acd063d370ce0692d142c20 SHA256 6c47a37cb86a84c2cdd0c3174df7dceaf7870c5716d85cf84a60d809433bf6b2
 DIST Zope2-2.12.15.zip 2336846 RMD160 bdc29b0c3eb46299a8a9c73ac02830558f8f7053 SHA1 e87592dc3bc1bf9ded285d3d3ba97bfb11379e20 SHA256 18a41800b220a5d1b20221f9076c6a7c654d26da8da2491e76813340d2c2e913
+DIST Zope2-2.12.16.zip 2337466 RMD160 12222234feaa122dabcc30346daf3464e8367efc SHA1 18096e6af5506c11743866166009b0c86dc5e0f8 SHA256 220f5658123afe1b042a1a2815e348ac82471e67cfd97a328d2be4113cbe8480
 DIST Zope2-2.13.2.zip 1391323 RMD160 394b394b90132c7acdbd278dc6667775be990d0e SHA1 0f8fc9a3d2a3e790c4a509a6fe8694299652f173 SHA256 f2143ca282c26e77db9249034d7129bebd3859c9798c662761cd4e6cd1626def
 DIST Zope2-2.13.3.zip 1391599 RMD160 dc7c80d69d80c539aea2a4f78daee5c3f2814afd SHA1 bb0e3834296f194d5cb01ae2ec01813b38cee047 SHA256 e780216ce530fb969a3d34ef06f8cdd6d420f0bd116603b045a8f21c53f162bb
 DIST Zope2-2.13.4.zip 1391659 RMD160 9eb923bd80a5cb470ec92314bce7acb89e72c3d2 SHA1 6f02db374f0496dd9d73323009064f5578df8493 SHA256 246f9a58ef888703f39a62ffd0e533f48ec18ec380329db6ca652faeb7d20606
@@ -16,8 +16,8 @@ EBUILD zope-2.10.11.ebuild 2334 RMD160 5628a00cce8b9dfcd847049528cc13c6c41c401d 
 EBUILD zope-2.10.7-r1.ebuild 2419 RMD160 a8eacc97fc3ec0d837e130c19b6160c51087054f SHA1 6cb14047b90e25b36582dc1b77296fd7033a1421 SHA256 b9fc3ccc0f925043e4999bc40d077ac3f927987fb72a4e2db3c1d2e9dac78f69
 EBUILD zope-2.10.7.ebuild 2378 RMD160 b5aec5e9ff6fc8081dff21d3ab5049929922712d SHA1 8a7d41e475abb6efd60b1212e8520f862d804f8b SHA256 641c43f253d26a75a926283f5a5c8dadc65797cf605984b5d1b185c1161e8845
 EBUILD zope-2.10.9.ebuild 2337 RMD160 7c7c5d215a96ecad33a10810e0d9c8e1d9dd9400 SHA1 b371ad3c5bfac6492b9c2c8483e3a00d60da3d3d SHA256 1dcd78b0751013e7b50fa9364ff2cf362a11046a7b824681c10395444cfc4889
-EBUILD zope-2.12.14.ebuild 4958 RMD160 475b68d3cf3225cf609ca443ee71ad7671380be5 SHA1 1e835a8e27d962fe5bf100b352bbb6fb9ec70bf4 SHA256 1f9a80aebdc1001eeb86d26384f9c03f6b43d5046bd5794ddf4ad0e2efd2c181
 EBUILD zope-2.12.15.ebuild 4958 RMD160 d1fb2604430781c9dddb2088c216733882beb447 SHA1 130a415f5b0c32e84a4b20b9b9ceca54f9a33b09 SHA256 6fb36a7d0708358700a438bac0128c9d9b8c2c1148bd73669800b5997ee18142
+EBUILD zope-2.12.16.ebuild 4958 RMD160 53648fc6b7979d81f86ced4c14d4ce215963bc3f SHA1 79634547e285cb17e24603ecb8f6c049bd39ba26 SHA256 9a9a6e5da8dcf1064ac5717453134b2704f97f68c6759e71836e5410a522b3d5
 EBUILD zope-2.13.2.ebuild 5100 RMD160 95c681fb788ad9753561e639cf8bef7a165853be SHA1 0488aea5d71ca6b18278206e43a14e7ee1dc3fed SHA256 64295e99a8a4b953026bf1ed4e2ee5819b0460cc15669c59137ae6f028c562f4
 EBUILD zope-2.13.3.ebuild 5100 RMD160 298381855cdf165de9037d4682b235157886c8ec SHA1 aa0a45c5030d07458685d0747048d8014e32878d SHA256 aca3d4c6b0553a1c6c30e7504d01e321a99a7a9f923fe597536c0402a8f8d96b
 EBUILD zope-2.13.4.ebuild 5100 RMD160 696c0583fb04a8d569767a49c86411df4a163e5a SHA1 b5a9d90b43472a065f8eb9b412293f6c885deb8c SHA256 e975aa77f8fefa727f153df8464f38adb85d43f3617b6cea9811b77eefaf40aa
@@ -26,5 +26,5 @@ EBUILD zope-2.9.10.ebuild 2397 RMD160 e33501ae1658b572c23e9383492215c2af0cc5b1 S
 EBUILD zope-2.9.12.ebuild 2356 RMD160 77459a869dd0925c53572055e901fa1e710128f1 SHA1 2abb52de300d7d67c1f5f13600310cbc37264dfd SHA256 55a08e94da72603b68859f3dd91595fb8d2fc481378e5e0c868265dc396f164d
 EBUILD zope-3.2.2.ebuild 3624 RMD160 e74adaedc41a265b71fd583d87b6f33b34448c0a SHA1 5632e19dc545b80c4ebe734119d81c39fe2b101e SHA256 82e0e16be113e8e2c7f4ca11ef1fa3dc24b96ca4a65161909c4c58999779d57d
 EBUILD zope-3.3.1.ebuild 3429 RMD160 4951ab3da1c9adc918f0a093a4bfac6deceba2b5 SHA1 5aefef7e3cf1cfc22674510ec6c78b4d8bcc6448 SHA256 7cc2aa03f0e77a65a6fc93aa01755a7eb41de30384366fd963172389606cc139
-MISC ChangeLog 30035 RMD160 2d071cf51624b92eb19e0dbb1d019b4a0411eaff SHA1 ce12769fa2fdea261577b37157f1a933045209eb SHA256 296a4b13fac5b2240d0d2ef57f1ee1016b878aa03b06e18f12967833acd6e920
+MISC ChangeLog 30200 RMD160 d36a547ef3e5b0a1ea64035a7e7b9e89e22fc72d SHA1 b2cc802c22a0426c40c2cc2955f09637646de8cd SHA256 26c832ec4419a98fd6c194a4f1a8594de855854dd2351b8ab3b0d9bcc5a60262
 MISC metadata.xml 161 RMD160 5e136d45f811478292bd2ee1798a9b0229ffe468 SHA1 9755179a2dee0511818b1f6738ded28e335e1b9a SHA256 e69ac7205cbc2e42a297e20d8f08922003390a345bbf50ccf00d1158a1c97cc5
