@@ -1,6 +1,12 @@
 # ChangeLog for net-zope/zope
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.194 2011/02/06 18:48:53 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.195 2011/02/23 16:23:26 arfrever Exp $
+
+*zope-2.12.16 (23 Feb 2011)
+
+  23 Feb 2011; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  -zope-2.12.14.ebuild, +zope-2.12.16.ebuild:
+  Version bump.
 
 *zope-2.13.4 (06 Feb 2011)
 *zope-2.13.3 (06 Feb 2011)
